--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>Search for an actor</title>
+  <title>Busca tus pelis</title>
   <script data-ad-client="ca-pub-7781491819210330" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   <meta name="clckd" content="370b8501b609d50ae24ea5c61ef63b79" />
 </head>
 <body>
-  <div id="app"></div>
+  <div id="app">
+  </div>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   <!-- built files will be auto injected -->
 </body>
