--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <title>Busca tus pelis</title>
   <script data-ad-client="ca-pub-7781491819210330" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-  <meta name="clckd" content="370b8501b609d50ae24ea5c61ef63b79" />
+  <meta name="exoclick-site-verification" content="2d95f5b4b27a09366e237c06ce58d3c1">
 </head>
 <body>
   <div id="app">
