--- a/index.html
+++ b/index.html
@@ -4,13 +4,11 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>Busca tus pelis</title>
-  <script data-ad-client="ca-pub-7781491819210330" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <title>Find your movies</title>
 </head>
 <body>
   <div id="app">
   </div>
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   <!-- built files will be auto injected -->
 </body>
 
